[package]
name = "discord_timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
indicatif = "0.17.7"
console = "0.15.7"
chrono = "0.4.31"
regex = "1.10.2"
clap = { version = "4.4.7", features = ["derive"] }
lazy_static = "1.4.0"
